# bananafzz

./: LICENSE  README.md
api/: Cargo.toml
api/src/: lib.rs
api/src/leafs/: array_comp.rs  bfl_leaf.rs  bounded_leaf.rs  const_leaf.rs  deref_leaf.rs  fd_leaf.rs  flag_leaf.rs  mod.rs  pattern_leaf.rs  phantom_leaf.rs  ptr_leaf.rs  random_leaf.rs  shared_leaf.rs  state_link.rs  str_leaf.rs  transform.rs  tuple_leaf.rs
core/: Cargo.toml
core/src/: config.rs  lib.rs
core/src/banana/: bananaq.rs  looper.rs  mod.rs  observer.rs  queue.rs
core/src/exec/: call.rs  fd_info.rs  id.rs  mod.rs
core/src/generator/: arg.rs  composite.rs  leaf.rs  mod.rs  serialize.rs
core/src/state/: id.rs  mod.rs  state.rs
fuzzer/: Cargo.toml
fuzzer/src/: lib.rs  main.rs
fuzzer/src/args/: mod.rs  movem.rs  smb2.rs  wsl.rs
fuzzer/src/args/epoll/: mod.rs  pollfd.rs
fuzzer/src/args/socket/: mod.rs  sockaddr.rs
fuzzer/src/calls/: close.rs  dummy.rs  dup.rs  ko.rs  load.rs  mod.rs  movem.rs
fuzzer/src/calls/epoll/: poll.rs
fuzzer/src/calls/socket/: accept.rs  bind.rs  connect.rs  listen.rs  mod.rs  recv.rs  send.rs  shutdown.rs  socket.rs
fuzzer/src/common/: table.rs
fuzzer/src/states/: mod.rs
fuzzer/src/states/coins/: looper.rs  sharing.rs  state.rs
fuzzer/src/states/mario/: looper.rs  mod.rs  sharing.rs  state.rs
fuzzer/src/states/socket/: looper.rs  sharing.rs  state.rs
generic/: Cargo.toml
generic/src/: lib.rs  native_alloc.rs
modules/behavior/: Cargo.toml
modules/behavior/src/: lib.rs
modules/bfl/: Cargo.toml
modules/bfl/src/: bfl.rs  crossover.rs  info.rs  lib.rs  poc.rs  repro.rs  shmem.rs  splice.rs
modules/bijon/: Cargo.toml
modules/bijon/src/: lib.rs
modules/common/: Cargo.toml
modules/common/src/: lib.rs
modules/debug/: Cargo.toml
modules/debug/src/: lib.rs
modules/feedback/: Cargo.toml
modules/feedback/src/: lib.rs
modules/filter/: Cargo.toml
modules/filter/src/: lib.rs
modules/limiter/: Cargo.toml
modules/limiter/src/: lib.rs
modules/mediator/: Cargo.toml
modules/mediator/src/: lib.rs
modules/plugs/: Cargo.toml
modules/plugs/src/: callbacks.rs  lib.rs
modules/raceunlocker/: Cargo.toml
modules/raceunlocker/src/: lib.rs
modules/sleeper/: Cargo.toml
modules/sleeper/src/: lib.rs
modules/smb/: Cargo.toml
modules/smb/src/: lib.rs  smb.rs  xxx.rs
modules/solback/: Cargo.toml
modules/solback/src/: lib.rs
modules/syncer/: Cargo.toml
modules/syncer/src/: lib.rs
tools/configs/: config.toml  modules.toml
tools/patches/: libafl-BFL-integration.patch  libafl-bijon-rotator-bfl.patch  libafl-patch-001.patch  stdfuzzer-patch-001.patch
tools/targets/SMB2/: Main.cpp
