[package]
name = "plugs"
version = "0.1.1"
authors = ["re:Zer0dAI <tutti@frutti.com>"]

[dependencies]
log = { version = "*", features = ["std"] }
env_logger = "*"
toml = "0.5.8"
serde = "1.0.131"
serde_derive = "1.0.131"
rand = "0.8.4"
core = { path = "../../core" }
common = { path = "../common" }
generic = { path = "../../generic" }
syncer = { path = "../syncer" }
filter = { path = "../filter" }
raceunlocker = { path = "../raceunlocker" }
sleeper = { path = "../sleeper" }
limiter = { path = "../limiter" }
debug = { path = "../debug" }
mediator = { path = "../mediator" }
bfl = { path = "../bfl" }
solback = { path = "../solback" }
behavior = { path = "../behavior" }

