[package]
name = "syncer"
version = "0.1.0"
authors = ["re:Zer0dAI <tutti@frutti.com>"]

[lib]
name = "libsyncer"
path = "src/lib.rs"
doc = false

[dependencies]
core = { path = "../../core" }
common = { path = "../common" }
serde = "1.0.131"
serde_derive = "1.0.131"
log = { version = "*", features = ["std"] }
env_logger = "*"
